added stop and start buttons

--- a/synthtranslatorapp/app/src/main/res/values/strings.xml
+++ b/synthtranslatorapp/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SynthTranslator</string>
+    <string name="startButton">Start</string>
+    <string name="stopButton">Stop</string>
 </resources>
