--- a/synthtranslatorapp/app/src/main/res/values/strings.xml
+++ b/synthtranslatorapp/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="stopButton">Stop</string>
     <string name="translatedText">could you tell me how to get to the \nsubway...</string>
     <string name="recognizedText">не могли бы вы подсказать как дойти до метро...</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
