--- a/synthtranslatorapp/app/src/main/res/values/strings.xml
+++ b/synthtranslatorapp/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="recognizedText">не могли бы вы подсказать как дойти до метро...</string>
     <string name="resetButton">Reset</string>
     <string name="barrierLevel">Голос...</string>
+    <string name="decibelsCount">84 Дб</string>
+    <string name="decibelsFact">Шум московского метро</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
